# DeepDrill

./: README.md  genindex.html  impressum.html  index.html
DDImage/: main.cpp
DeepDrill/: Application.cpp  Application.h  Coefficients.cpp  Coefficients.h  Coord.cpp  Coord.h  DrillMap.cpp  DrillMap.h  Driller.cpp  Driller.h  Makefile  Options.cpp  Options.h  Palette.cpp  Palette.h  ProgressIndicator.h  ReferencePoint.cpp  ReferencePoint.h  config.h  main.cpp
DeepDrill.xcodeproj/: project.pbxproj
Examples/: 1e14.ini  Makefile  dinosaur_fossils.ini  dragon.ini  dragon_detail.ini  e10000.ini  e52465.ini  evolution_trees.ini  flake.ini  glitch_test_1.ini  glitch_test_2.ini  glitch_test_3.ini  glitch_test_4.ini  glitch_test_5.ini  glitch_test_6.ini  golden_spider.ini  hard.ini  long.ini  lya.ini  olbaid1.ini  olbaid2.ini  olbaid3.ini  opus.ini  orion.ini  peanuts.ini  safari.ini  seahorse.ini  spider.ini  super_dense.ini  triangle.ini  wfs.ini  wfs2.ini  wfs4.ini  wfs_mb.ini  x.ini
Locations/: 11_dimensions.ini  1e14.ini  1e14.loc  dinosaur_fossils.loc  dinosaur_fossils.raw  dinosaur_fossils.tiff  dragon.ini  dragon.tiff  e10000.raw  e10000.tiff  e22522.ini  e22522.raw  e52465.raw  evolution_trees.loc  flake.ini  floral_fantasy.ini  floral_fantasy.raw  glitch_test_1.ini  glitch_test_4.loc  glitch_test_5.ini  glitch_test_5.loc  golden_spider.ini  golden_spider.raw  golden_spider.tiff  hard.ini  hard.loc  hard.raw  hard.tiff  infinity.ini  long.ini  olbaid2.loc  olbaid3.loc  olbaid4.ini  olbaid5.ini  opus2.ini  orion.loc  peanuts.ini  spider.loc  threads_colour.ini  triangle.ini  (+3 more)
Locations2/: 11_dimensions.loc  1e14.raw  dragon_detail.raw  e22522.loc  e22522.tiff  e52465.loc  e52465.tiff  evolution_trees.raw  flake.loc  floral_fantasy.tiff  glitch_test_3.loc  golden_spider.loc  long.loc  olbaid4.loc  opus.loc  peanuts.loc  safari.loc  threads_colour.loc  wfs4.loc
Overview/: About.html
Palettes/: ice.ini  vulcano.ini
Profiles/: config.ini  config.prf  debug.ini  high.ini  high.prf  low.ini  medium.ini  thumbnail.ini  ultra.ini  ultra.prf
Profiles2/: low.prf
References/: Links.html
Source/: Makefile
Theory/: Perturbation.html  SeriesApproximation.html
Tutorials/: Installation.html
Utilities/: Chrono.cpp  Parser.cpp  Parser.h
_sources/: index.rst.txt
docs/: building.html  conf.py  genindex.html  index.html  index.rst  installation.html  mandel.html  objects.inv  perturb.html  search.html  searchindex.js  series.html  tutorial.html
locations/: 1e14.tiff  base.loc  dragon.loc  dragon.raw  dragon_detail.loc  dragon_detail.tiff  e10000.loc  e113.loc  e52465.loc  e634.loc  e890.loc  evolution_trees.tiff  flake.loc  flake.raw  flake.tiff  floral_fantasy.loc  glitch_test_1.loc  glitch_test_2.loc  glitch_test_3.loc  glitch_test_6.loc  golden_spider.loc  hard.loc  heaven.loc  infinity.loc  long.loc  mitosis.loc  mitosis2.loc  newtutorial.loc  olbaid2.loc  olbaid5.loc  opus.loc  opus2.loc  safari.loc  seahorse.loc  spider.loc  test.loc  test3.loc  test4.loc  test6.loc  the_complexity_of_a_line.loc  (+11 more)
palettes/: ice.prf
profiles/: 3D.ini  3D.prf  4K.ini  8K.prf  FHD.ini  HD.prf  LD.ini  SD.ini  debug.ini  debug.prf  high.prf  low.prf  medium.prf  normalmap.ini  relief.ini  relief.prf  short.prf  textured.ini  thumbnail.prf  tutorial.prf  ultra.prf
shaders/: bicubic.glsl  bilinear.glsl  bypass.glsl  catmull.glsl  imageScaler.glsl  lambert.glsl  lanczos.glsl  merger.glsl  nearest.glsl  normalmap.glsl  oldlambert.glsl  relief.glsl  (+2 more)
src/: Application.cpp  Application.h  CMakeLists.txt  Coefficients.h  Colorizer.cpp  Colorizer.h  Coord.cpp  Coord.h  DrillMap.cpp  DrillMap.h  Driller.cpp  Driller.h  Logger.cpp  Logger.h  Makefile  Maker.cpp  Maker.h  Options.cpp  Options.h  Palette.cpp  Palette.h  ProgressIndicator.cpp  ProgressIndicator.h  ReferencePoint.cpp  ReferencePoint.h  commons.h  config.h  main.cpp
src/Commons/: Chrono.cpp  Exception.cpp  Parser.cpp
src/DeepDrill/: Coefficients.h  Coord.cpp  Coord.h  Options.cpp  deepdrill  main.cpp
src/DeepTravel/: DeepTravel.cpp  DeepTravel.h
src/ddrill/: Approximator.cpp  Approximator.h  CMakeLists.txt  Coefficients.cpp  Coefficients.h  Colorizer.cpp  Colorizer.h  Coord.cpp  Coord.h  DeepDrill.cpp  DeepDrill.h  DrillMap.cpp  DrillMap.h  DrillOptions.cpp  DrillOptions.h  Driller.cpp  Driller.h  Makefile  Maker.cpp  Maker.h  MapAnalyzer.cpp  MapAnalyzer.h  Options.cpp  Options.h  Palette.cpp  Palette.h  ReferencePoint.cpp  ReferencePoint.h  SlowDriller.cpp  SlowDriller.h
src/dflight/: CMakeLists.txt  DeepFlight.cpp  DeepFlight.h  FFmpeg.cpp  FFmpeg.h  NamedPipe.cpp  NamedPipe.h  Recorder.cpp  Recorder.h  Shaders.h  Zoomer.cpp  Zoomer.h
src/dmake/: CMakeLists.txt  DeepMake.cpp  DeepMake.h  Maker.cpp  Maker.h
src/dtravel/: CMakeLists.txt  DeepTravel.cpp  DeepTravel.h  FFmpeg.cpp  NamedPipe.cpp  NamedPipe.h  Recorder.cpp  Recorder.h  TravelOptions.cpp  TravelOptions.h  Traveller.cpp  Traveller.h  Zoomer.h
src/dzoom/: CMakeLists.txt  DeepZoom.cpp  DeepZoom.h  FFmpeg.cpp  FFmpeg.h  NamedPipe.cpp  NamedPipe.h  Recorder.cpp  Recorder.h  Zoomer.cpp  Zoomer.h
src/math/: CMakeLists.txt  ExtendedComplex.cpp  ExtendedComplex.h  ExtendedDouble.cpp  ExtendedDouble.h  PrecisionComplex.cpp  PrecisionComplex.h  StandardComplex.cpp  StandardComplex.h
src/shared/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  Colorizer.cpp  Colorizer.h  Coord.cpp  Coord.h  DrillMap.cpp  DrillMap.h  Filter.cpp  Filter.h  ImageMaker.cpp  ImageMaker.h  Logger.cpp  Logger.h  Options.cpp  Options.h  Palette.cpp  Palette.h  ProgressIndicator.cpp  ProgressIndicator.h
src/util/: Animated.cpp  Animated.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Chrono.cpp  Chrono.h  Colors.cpp  Colors.h  Compressor.cpp  Compressor.h  Dynamic.cpp  Dynamic.h  DynamicFloat.cpp  DynamicFloat.h  Exception.cpp  Exception.h  IO.cpp  IO.h  Logger.cpp  Logger.h  Makefile  Parser.cpp  Parser.h  ProgressIndicator.cpp  ProgressIndicator.h  Types.h  spline.h
(+250 files in other folders)
